--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,208 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box; /* Aplica el modelo de caja de borde a todos los elementos */
-  font-family: Arial, sans-serif; /* Establece la fuente predeterminada para todos los elementos */
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
 }
 
 body {
-  background-color: #333; /* Color de fondo del cuerpo */
-  display: flex; /* Utiliza flexbox para centrar el contenido */
-  justify-content: center; /* Centra el contenido horizontalmente */
-  align-items: center; /* Centra el contenido verticalmente */
-  height: 100vh; /* Altura del cuerpo ocupa el 100% de la altura de la ventana */
-  margin: 0; /* Elimina los márgenes predeterminados del cuerpo */
+  background-color: #282c34;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+#container {
+  display: flex;
+  gap: 20px;
 }
 
 #game-board {
-  display: grid; /* Utiliza el sistema de cuadrícula CSS */
-  grid-template-columns: repeat(var(--grid-size), var(--cell-size)); /* Define el número de columnas y su tamaño */
-  grid-template-rows: repeat(var(--grid-size), var(--cell-size)); /* Define el número de filas y su tamaño */
-  background-color: #ccc; /* Color de fondo del tablero */
-  padding: var(--cell-gap); /* Espaciado alrededor del tablero */
-  gap: var(--cell-gap); /* Espacio entre las celdas */
-  position: relative; /* Permite posicionamiento absoluto de los elementos hijos */
+  display: grid;
+  grid-template-columns: repeat(var(--grid-size), var(--cell-size));
+  grid-template-rows: repeat(var(--grid-size), var(--cell-size));
+  background-color: #3b3b3b;
+  padding: var(--cell-gap);
+  gap: var(--cell-gap);
+  position: relative;
+  border-radius: 10px;
 }
 
 .cell {
-  background-color: #aaa; /* Color de fondo de las celdas vacías */
+  background-color: #4f4f4f;
 }
 
 .tile {
-  --x: 2; /* Valor inicial para la coordenada x de la tile */
-  --y: 3; /* Valor inicial para la coordenada y de la tile */
-  --background-lightness: 80%; /* Brillo inicial del fondo de la tile */
-  --text-lightness: 20%; /* Brillo inicial del texto de la tile */
-  --tile-color: hsl(0, 0%, 80%); /* Color inicial del fondo de la tile */
-  position: absolute; /* Posiciona absolutamente la tile dentro de su contenedor */
-  display: flex; /* Utiliza flexbox para centrar el contenido */
-  justify-content: center; /* Centra el contenido horizontalmente */
-  align-items: center; /* Centra el contenido verticalmente */
-  width: var(--cell-size); /* Ancho de la tile igual al tamaño de la celda */
-  height: var(--cell-size); /* Altura de la tile igual al tamaño de la celda */
-  top: calc(var(--y) * (var(--cell-size) + var(--cell-gap)) + var(--cell-gap)); /* Calcula la posición superior de la tile */
-  left: calc(var(--x) * (var(--cell-size) + var(--cell-gap)) + var(--cell-gap)); /* Calcula la posición izquierda de la tile */
-  font-weight: bold; /* Establece el texto en negrita */
-  background-color: var(--tile-color); /* Color de fondo de la tile definido por la variable */
-  color: hsl(200, 25%, var(--text-lightness)); /* Color del texto de la tile */
-  animation: show 200ms ease-in-out; /* Define la animación de aparición de la tile */
-  transition: 100ms ease-in-out; /* Define la transición para los cambios de estilo */
-  font-size: 8vmin; /* Tamaño de la fuente en unidades vmin */
+  --x: 2;
+  --y: 3;
+  --background-lightness: 80%;
+  --text-lightness: 20%;
+  --tile-color: hsl(0, 0%, 80%);
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: var(--cell-size);
+  height: var(--cell-size);
+  top: calc(var(--y) * (var(--cell-size) + var(--cell-gap)) + var(--cell-gap));
+  left: calc(var(--x) * (var(--cell-size) + var(--cell-gap)) + var(--cell-gap));
+  font-weight: bold;
+  background-color: var(--tile-color);
+  color: hsl(0, 0%, var(--text-lightness));
+  animation: show 200ms ease-in-out;
+  transition: 100ms ease-in-out;
+  font-size: 8vmin;
 }
 
 @keyframes show {
   0% {
-    opacity: 0.5; /* Opacidad inicial de la animación */
-    transform: scale(0); /* Escala inicial de la animación */
+    opacity: 0.5;
+    transform: scale(0);
   }
+}
+
+#sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #2c2c2c;
+  color: black;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px;
+}
+
+#score-board {
+  background-color: white;
+  color: black;
+  padding: 20px;
+  width: 100%;
+  text-align: center;
+  font-size: 2em;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+#leaderboard {
+  width: 100%;
+  background-color: white;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+#leaderboard h2 {
+  font-size: 1.5em;
+  text-align: center;
+  margin-bottom: 10px;
+  font-weight: bold;
+  color: #2c3e50;
+  border-bottom: 2px solid #3498db;
+  padding-bottom: 5px;
+}
+
+.leaderboard-header {
+  display: grid;
+  grid-template-columns: 1fr 1.9fr 0.95fr 1fr;
+  padding: 10px;
+  font-weight: bold;
+  color: #2c3e50;
+  border-bottom: 1px solid #3498db;
+  column-gap: 20px;
+}
+
+
+#leaderboard-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+#leaderboard-list li {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr 1fr;
+  margin: 10px 0;
+  padding: 15px;
+  background-color: white;
+  border-radius: 8px;
+  color: #333;
+  font-weight: bold;
+  border: 2px solid #61dafb;
+  transition: border 0.3s;
+  font-size: 1em;
+}
+
+/* Estilos para el formulario de Game Over */
+#game-over-form {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.7);
+  color: #333333;
+  text-align: center;
+  width: 400px;
+}
+
+#game-over-form h2 {
+  margin-bottom: 20px;
+  font-size: 1.8em;
+  color: #2c3e50;
+}
+
+#game-over-form label {
+  font-size: 1.1em;
+  color: #2c3e50;
+  display: block;
+  margin-top: 10px;
+}
+
+#game-over-form input[type="text"] {
+  width: 90%;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  border: 1px solid #bdc3c7;
+}
+
+#game-over-form button {
+  background-color: #3498db;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 1em;
+  cursor: pointer;
+}
+
+#game-over-form button:hover {
+  background-color: #2980b9;
+}
+
+.pagination-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.pagination-buttons button {
+  background-color: #3498db;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+.pagination-buttons button:hover {
+  background-color: #2980b9;
 }
